--- a/geschichten/index.html
+++ b/geschichten/index.html
@@ -87,7 +87,7 @@
           <br>
             nach Astrid Lindgren und wahren Erlebnissen <br>
  <br>
-            Hast du schon mal von MICHEL AUS LÖNNEBERGA gehört? Er lebte auf dem Katthult-Hof in der Gemeinde Lönneberga in Sm°aland. Michel war fünf Jahre alt, hatte hübsche blonde Haare und große blaue Augen. Richtig nett sah er aus, der Michel, wie ein kleiner Engel. Doch in ganz Lönneberga, in ganz Sm°aland, in ganz Schweden, ja vielleicht sogar auf der ganzen Welt gab es keinen Jungen, der mehr Unfug machte. Und jeder in Lönneberga kannte ihn... <br>
+            Hast du schon mal von MICHEL AUS LÖNNEBERGA gehört? Er lebte auf dem Katthult-Hof in der Gemeinde Lönneberga in Småland in Schweden. Michel war fünf Jahre alt, hatte hübsche blonde Haare und große blaue Augen. Richtig nett sah er aus, der Michel, wie ein kleiner Engel. Doch in ganz Lönneberga, in ganz Småland, in ganz Schweden, ja vielleicht sogar auf der ganzen Welt gab es keinen Jungen, der mehr Unfug machte. Und jeder in Lönneberga kannte ihn... <br>
             <br>
             Nur Michels Mutter sagte: "Michel ist ein netter, kleiner Junge. Ich habe ihn lieb, so wie er ist!" Seine Streiche schrieb sie heimlich in blaue Schreibheftchen auf. Und glaube uns, es waren viele Schreibheftchen, die sie im Schubfach ihrer Kommode aufbewahrte. Schließlich war die Schublade mit Schreibheften so vollgestopft, dass man sie kaum herausziehen konnte. Immer legte sich ein Heftchen quer. Aber noch heute sind sie dort aufbewahrt, in derselben alten Kommode, diese BLAUE SCHREIBHEFTCHEN - wir waren dort!  <br>
             <br>
@@ -99,7 +99,7 @@
             <br>
             Kommst du jemals auf so einen Hof wie Katthult, dann wirst auch du richtig Lust kriegen, zwischen alle den vielen kleinen Häusern VERSTECKEN zu spielen. Wir haben es erlebt: auf Katthult gab es nicht nur eine Scheune und jeweils einen Stall für die Pferde, einen für die Kühe, einen für die Schweine, einen für die Schafe und natürlich einen Hühnerstall, sondern auch noch eine Menge anderer kleiner Häuser und Schuppen. Es gab ein Räucherhaus, in dem Mama Alba ihre LECKERE WURST räucherte, und ein Wäschehaus, in dem Lina nicht nur Michels schmutzige Hosen wusch. Und wirklich ganz dicht beieinander gab es noch zwei Häuser - in einem waren die Vorratskammer und die Mangelstube, im anderen war der Holzschuppen und der Tischlerschuppen. Jette und ihr großer Bruder spielten lange Verstecken und schlichen zwischen all diesen Häuschen herum, aber natürlich nicht dort, wo BRENNESSELN waren. Und natürlich auch nicht mehr, als einladende Gerüche aus der Küche kamen. Während Papa Anton auf der Auktion auf Backhorva war, bereiteten Michels Mama und Lina das große Festessen für Sonntag vor. Wie immer sollte es Fleischklöße geben. Außerdem machten sie Rippchen und Kalbsrouladen und Heringssalat und ZIMTSCHNECKEN und Apfelkuchen und Aal in Gelee und Geschmortes und Pudding und zwei riesige Käsekuchen und dann Mama Albas ganz besondere Wurst, die sooooo lecker war, dass viele Leute gern lange Wege fuhren, sogar von Vimmerby und Hutsfred und "TYSKLAND", nur um sie essen zu können. So gern hätten wir von all den Köstlichkeiten gekostet... <br>
             <br>
-            Nur einem war gehörig der Appetit vergangen: Jettes Papa hatte ZAHNSCHMERZEN! Wie Lina saß er jammernd auf der Küchentreppe. Zur zweiten dicke Backe fehlte ihm lediglich der Bienenstich. Seufzend überlegte er, ob er wohl zu Zahn-Pelle gehen sollte, dem Schmied in Lönneberga, der den Lönnebergern schmerzende Zähne mit seiner großen, grausigen Zange auszog. Oder ob er besser auf Michel und seine Idee warten sollte. Lina erklärte MICHEL sie in besten Sm°aländisch: "Ich brauche nur zwei Sachen - mein PFERD LUKAS und einen langen, festen Zwirnsfachen. Das eine Ende binde ich um deinen Zahn und das andere Ende hinten an meinen Gürtel. Dann galoppiere ich mit Lukas los - und plupp, fliegt der Zahn raus!" <br>
+            Nur einem war gehörig der Appetit vergangen: Jettes Papa hatte ZAHNSCHMERZEN! Wie Lina saß er jammernd auf der Küchentreppe. Zur zweiten dicke Backe fehlte ihm lediglich der Bienenstich. Seufzend überlegte er, ob er wohl zu Zahn-Pelle gehen sollte, dem Schmied in Lönneberga, der den Lönnebergern schmerzende Zähne mit seiner großen, grausigen Zange auszog. Oder ob er besser auf Michel und seine Idee warten sollte. Lina erklärte MICHEL sie in besten Småländisch: "Ich brauche nur zwei Sachen - mein PFERD LUKAS und einen langen, festen Zwirnsfachen. Das eine Ende binde ich um deinen Zahn und das andere Ende hinten an meinen Gürtel. Dann galoppiere ich mit Lukas los - und plupp, fliegt der Zahn raus!" <br>
             "Plupp, ja, vielen Dank," sagte Jettes Papa entrüstet. "Mit mir wird hier nicht galoppiert! Ich warte tapfer bis wir wieder zurück zu Haus in Deutschland bei meiner Zahnärztin sind. So lange schlürfe ich Rindfleischsuppe und passe auf, dass Michel nicht wieder mit seinem Kopf in der SUPPENSCHÜSSEL stecken bleibt..."<br>
             <br>
             <a href="/rezepte/?search=%2523schweden" target="_blank">Zu den Rezepten</a>
@@ -110,20 +110,18 @@
       <img src="/imgs/geschichten/rhabarberbarbara.jpg" alt="">
       <div class="text">
         <div class="content">
-          <h3>RHA <br>
-                    BAR <br>
-                    BER</h3>
-                    Barbara <br>
-                    <br>
+          <h3>RHABARBARA</h3>
+          <br>
+          Wenn im Sommer aus den zarten Stängeln des Rhabarbers riesige Blätterpalmen erwachsen, wächst auch in uns die Freude, uns die wunderbare Geschichte von Barbara und ihrem leckeren Rhabarberkuchen zu erzählen.<br>
+          <br>
+          Doch das ist gar nicht so einfach! Wie war das noch? Rhabarbara, Bartbiere, Barbelbär, ... ach herrje! Prima, dass wir beim Putzen und Schnippeln unserer Rhabarberberge und der Zubereitung unserer köstlichen Rhabarber-Raritäten sooooooooo viel Zeit haben, Wortakrobatik & Zungenbrecher rund um Barbara, Bärbel und ihre Freunde perfekt zu üben!<br>
+          Probier auch du dein Glück mit Hilfe des kleinen <a href="https://www.youtube.com/watch?v=gG62zay3kck" target="_blank">animierten Films...</a> <br>
+          <br>
+          RHABARBERBARBARABARBABARENBARTBARBIERBIERBARBÄRBEL <br>
 
 
-              Wenn im Sommer aus den zarten Stängeln des Rhabarbers riesige Blätterpalmen erwachsen, wächst auch in uns die Freude, uns die wunderbare Geschichte von Barbara und ihrem leckeren Rhabarberkuchen zu erzählen. Doch das ist gar nicht so einfach! Wie war das noch? Rhabarbara, Bartbiere, ... ach herrje! Prima, dass wir beim Putzen und Schnippeln unserer Rhabarberberge und der Zubereitung unserer geliebten Rhabarber-Spezialitäten sooooooooo viel Zeit haben, Wortakrobatik & Zungenbrecher rund um Barbara, Bärbel und ihre Freunde perfekt zu üben! Probier auch du dein Glück mit Hilfe des kleinen <a href="https://www.youtube.com/watch?v=gG62zay3kck" target="_blank">animierten Films...</a> <br>
- <br>
-              Rhabarberbarbarabarbarenbartbarbierbierbärbelbar <br>
-
-
-            <br>
-            <a href="/rezepte/?search=%2523rhabarbara" target="_blank">Zu den Rezepten</a>
+          <br>
+          <a href="/rezepte/?search=%2523rhabarbara" target="_blank">Zu den Rezepten</a>
         </div>
       </div>
     </div>
@@ -226,7 +224,7 @@
           Der Duft der blauen Blumen verzaubert uns. Wir fühlen uns wie GOTT IN FRANKREICH. Stundenlang sitzen wir auf der angrenzenden Wiese und GENIESSEN den Blick in die LILA LANDSCHAFT. Ein Traum.  <br>
           An einer zum <a href="https://taoasis.com/" target="_blank">Verkaufsladen</a> umgebauten Ape stöbern wir nach allerlei hübschen und nützlichen - aus LAVENDEL hergestellten - Kleinigkeiten:
           Öl, Tee, Seife, Mückenstift, Wäschesäckchen... Soooooo schööööön! <br>
-          Was wir manchmal echt vermissen: köstliches französches Essen - <a href="/rezepte/zwiebeltarte-mit-pflaumen" target="_blank">Tarte</a>, Cidre, Galettes, ein guter Wein....
+          Was wir manchmal echt vermissen: köstliches französches Essen - Tarte, Cidre, Galettes, ein guter Wein....
           Bis es dort etwas Leckeres zu schmausen gibt, packen wir unseren Rucksack oder Picknick-Korb. <br>
           <br>
           Welch GLÜCK, den Urlaub direkt vor der Haustür zu haben...<br>
@@ -246,8 +244,8 @@
           <br>
           Wir lieben den Wald direkt vor unserer Haustür! Ein Arboretum. Ein Kleinod. <br>
           Dort joggen, spazieren, spielen, gedenken, beten wir. Wir treffen Freunde & Tiere, pflücken BÄRLAUCH, stibitzen BEEREN, entdecken PILZE, trinken Brunnenwasser, waten im Tretbecken, sammeln Kastanien, ... <br>
-          Und wenn im Oktober das kleine Café am Brunnenhäuschen schließt, packen wir in unsere Körbchen viele KLEINE KÖSTLICHKEITEN und freuen uns auf unser Waldpicknick. <br>
-          Vermooste Treppenstufen, dicke Steine am Wasser, ausgehöhlte Totholzstämme - kann es eine schönere Kulisse geben? GOLDENE BLÄTTER fallen und wir decken auf einem BAUMSTAMM unseren Tisch. So wie die dicke Eiche am Wegesrand die alte Buche fest umarmt, so fühlen auch wir uns mit der Natur verbunden. Mitgebrachtes schmeckt an der FRISCHEN LUFT einfach viel besser als zu Haus! Und weil das Orkantief "Friederike" im Januar 2018 auch in unserem Lieblingswald eine Schneise der Verwüstung hinterlassen hat, beteiligen wir uns absolut gern an der <a href="https://www.brakel.de/Leben/DER-Bürgerwald-Brakel/Infos-zum-Bürgerwald" target="_blank">Aktion "Bürgerwald"</a>. Es macht etwas mit uns, unsere selbst gepflanzten Bäume wachsen sehen zu können! Und irgendwann - wenn sie groß und stark sind - freuen wir uns darauf, in ihrem SCHATTEN zum Waldpicknick einzuladen. <br>
+          Und wenn im Oktober das kleine Café am Brunnenhäuschen schließt oder im Frühling noch nicht geöffnet hat, packen wir in unsere Körbchen viele KLEINE KÖSTLICHKEITEN und freuen uns auf unser Waldpicknick. <br>
+          Vermooste Treppenstufen, dicke Steine am Wasser, ausgehöhlte Totholzstämme - kann es eine schönere Kulisse geben? GOLDENE BLÄTTER fallen oder das erste frische Grün sprießt und wir decken auf einem BAUMSTAMM unseren Tisch. So wie die dicke Eiche am Wegesrand die alte Buche fest umarmt, so fühlen auch wir uns mit der Natur verbunden. Mitgebrachtes schmeckt an der FRISCHEN LUFT einfach viel besser als zu Haus! Und weil das Orkantief "Friederike" im Januar 2018 auch in unserem Lieblingswald eine Schneise der Verwüstung hinterlassen hat, beteiligen wir uns absolut gern an der <a href="https://www.brakel.de/Leben/DER-Bürgerwald-Brakel/Infos-zum-Bürgerwald" target="_blank">Aktion "Bürgerwald"</a>. Es macht etwas mit uns, unsere selbst gepflanzten Bäume wachsen sehen zu können! Und irgendwann - wenn sie groß und stark sind - freuen wir uns darauf, in ihrem SCHATTEN zum Waldpicknick einzuladen. <br>
           <br>
           Welch GLÜCK für uns und unsere Freunde....<br>
           <br>
@@ -279,10 +277,10 @@
           <h3>EINZIGARTIG...</h3>
           <br>
           <br>
-          Unser allerliebstes Kochbuch ist der Mittelpunkt unseres Hauses!
-
-          Ein Leben ohne essen & trinken - unmöglich. Unser Leben ohne FAMILIE & FREUNDE - ebenfalls unmöglich!<br>
-          Als wir im Jahr 2000 unser Zuhause planten, wünschten wir uns einen offenen Grundriss für ein offenes Herz.<br>
+          Unser allerliebstes Kochbuch ist der Mittelpunkt unseres Hauses!<br>
+          <br>
+          Ein Leben ohne essen & trinken - unmöglich. Unser Leben ohne FAMILIE & FREUNDE - ebenfalls unmöglich! Als wir im Jahr 2000 unser Zuhause planten, wünschten wir uns einen offenen Grundriss für ein offenes Herz.<br>
+          <br>
           Folgerichtig beherbergt das Esszimmer in seiner Mitte nicht nur einen großen Esstisch, an dem gefuttert, GELACHT, gespielt, gequatscht, gefeiert... wird,
           sondern auch die Treppe und eine über dem Tisch geöffnete Galerie, von der aus alle Zimmer im Haus zu erreichen sind.<br>
           Die Suche nach einer das Deckenloch nicht verschließenden, vielmehr filigran schmückenden Esszimmerlampe gestaltete sich viel einfacher als wir glaubten:<br>
@@ -382,15 +380,15 @@
             Auch, wenn die Spiele-Sets Texte, Kostüm-, Playlist- und Menüvorschläge mit samt Rezepten enthalten, möchten wir an dieser Stelle gern unsere Idee für ein MÖRDERISCHES MENÜ vorstellen. <br>
             <br>
             <h4>VORSPEISE</h4>
-            quälend langsam gekochte <a href="/rezepte/orangen-kürbissuppe-mit-zimt-croutons/" target="_blank">Kürbissuppe</a> - <br>
+            quälend langsam gekochte Kürbissuppe - <br>
             verfeinert mit eiskalt gepresstem Orangensaft & auf dem Scheiterhaufen gerösteten Zimtcroutons <br>
             <br>
             <h4>HAUPTGERICHT</h4>
-            brutal aufgeschlitzte <a href="/rezepte/hähnchen-mit-dattelspinatfüllung" target="_blank">Hähnchenbrust</a> - <br>
+            brutal aufgeschlitzte Hähnchenbrust - <br>
             gefüllt mit giftgrünem Blattspinat an kandierter blutiger Rote Bete <br>
             <br>
             <h4>NACHTISCH</h4>
-            trügerisch köstliche Beeren mit grausam gekrümeltem <a href="/rezepte/blueberry-crumble" target="_blank">Crumble</a> <br>
+            trügerisch köstliche Beeren mit grausam gekrümeltem Crumble <br>
             <br>
             Es bleibt die Frage nach dem Mordwerkzeug - EIN LÖFFEL vielleicht?<br>
             <br>
