--- a/loeffelfreunde/index.html
+++ b/loeffelfreunde/index.html
@@ -49,6 +49,23 @@
         </div>
       </div>
       <div class="item">
+        <img src="/imgs/löffelfreunde/spoonies.jpg" alt="">
+        <div class="text">
+          <div class="content">
+            <h3>LAUTER LECKERE LÖFFEL!</h3>
+             <br>
+            Kakao, Anis, Salz & Pfeffer, Hafer... <br>
+            Aus RESTSTOFFEN der Lebensmittelindustrie, kombiniert mit Fasern aus Kakaoschale oder Hafer entstehen knusprige Keksschaufeln. CHOC oder CLASSIC. Sie schmelzen weder in der SONNE noch weichen sie durch Feuchtigkeit schnell auf.  <br>
+            Sie sind eine tolle Alternative zu den 360 Millionen Plastiklöffeln, die weltweit jährlich allein zum EIS gereicht werden und anschließend unsere Umwelt belasten. <br>
+            <br>
+            Sowohl im FairTrade-Shop als auch bei unserem Lieblings-Italiener haben wir essbare Löffel in verschiedenen Formen und Geschmacksrichtungen entdeckt. <br>
+            Die Spoonies sind NACHHALTIG, vegan und etwas ganz Besonderes! Wir SCHAUFELN mit ihnen übrigens auch Dessert, Frozen Joghurt, Latte Macchiato, Marmelade, Chutney und Dip - funktioniert hervorragend, schmeckt irre lecker und schenkt LÖFFELFREUDE!<br>
+            <br>
+            <a href="/rezepte/?search=%2523spoonies" target="_blank">Zu den Rezepten</a>
+          </div>
+        </div>
+      </div>
+      <div class="item">
         <img src="/imgs/löffelfreunde/rotkohl-eier.jpg" alt="">
         <div class="text">
           <div class="content">
@@ -69,9 +86,9 @@
             Zwischenzeitlich die Eier etwa 10 Minuten hart kochen. <br>
             Die Eier für mindestens 10 Stunden in dem abgekühlten Sud ziehen lassen: Möchtest du eine Marmorierung, dann verstecke die Eier zwischen dem Kohl. Sollen die Eier eine homogene Farbe annehmen, siebe das dunkle Wasser ab und lege die Eier in das Rotkohlwasser. <br>
             <br>
-            Eine richtig tolle Wirkung erzielen die Eier, wenn man sie in natürlicher Umgebung dekoriert. Wir haben letzten Jahr ein verlassenes Vogelnest in unserem Garten gefunden, aber auch Heu von unseren Zwergkaninchen oder frisch gesammeltes Moos bietet eine tolle Kulisse. Frohe Ostern!
-
-
+            Eine richtig tolle Wirkung erzielen die Eier, wenn man sie in natürlicher Umgebung dekoriert. Wir haben letzten Jahr ein verlassenes Vogelnest in unserem Garten gefunden, aber auch Heu von unseren Zwergkaninchen oder frisch gesammeltes Moos bietet eine tolle Kulisse.<br>
+            <br>
+            Frohe Ostern!
           </div>
         </div>
       </div>
@@ -89,6 +106,7 @@
             Und so ist es noch heute: Gern serviert sie ein Gericht in SCHALE oder SCHÜSSEL, hat es doch gleich etwas Wohltuendes.
             HERZBERÜHRENDES. Die Hände umschließen die sanfte Form, ein einziger Blick ins Innere nimmt auf, was sich Besonderes darin
             befindet und all das hat man ganz für sich allein... <br>
+            <br>
             Die perfekte Harmonie der Texturen, cremig-weich, verbunden mit knackig-kernig.<br>
             Die nährstoffreichen BOWLS enthalten alles, was wir lieben: <br>
             Kräuter, Samen, Kerne & Frische im Frühling und Sommer,<br>
