--- a/nicole_jette/index.html
+++ b/nicole_jette/index.html
@@ -250,6 +250,7 @@
 
             <a href="mailto:lecker@loeffelweise-glueck.de">lecker(at)loeffelweise-glueck.de</a> <br>
             <a href="instagram.com/loeffelweise.glueck" target="_blank">instagram.com/loeffelweise.glueck</a><br>
+            <a href="https://www.facebook.com/L%C3%B6ffelweise-Gl%C3%BCck-101153131954283" target="_blank">https://www.facebook.com/Löffelweise-Glück-101153131954283</a>
             <!-- pinterest.com/loeffelweise-glueck <br>
             facebook.com/loeffelweise-glueck -->
 
